--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ rp2040-hal = "0.9.0"
 cortex-m-rt = { version = "0.7.3", optional = true }
 rp2040-boot2 = { version = "0.3.0", optional = true }
 seeeduino-xiao-rp2040 = "0.5.0"
-ssd1306 = "0.8.1"
+ssd1306 = { git = "https://github.com/jamwaffles/ssd1306", rev = "b266506" }
 critical-section = "1.0.0"
 embedded-hal ="0.2.7"
 inverted-pin = "0.2.0"
